백그라운드 수정

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "My YouTube Playlist Sidebar",
   "version": "1.0",
   "description": "Save and access YouTube videos quickly from a sidebar.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "tabs"],
   "host_permissions": ["https://www.youtube.com/*"],
   "action": {
     "default_icon": {
